# ductape

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  build-phases.md  requirements-status.md
ductape/: __init__.py  __main__.py  builtin_codegen.py  cli.py  codegen.py  config.py  dependency_extractor.py  exceptions.py  struct_diff.py  two_stage.py  version_diff.py  warnings.py
ductape/conv/: __init__.py  code_writer.py  converter.py  data_type.py  data_type_version.py  expression_eval.py  field_provenance.py  interface_version.py  parser.py  preprocessor.py  source_container.py  tokenizer.py  type_registry.py  typecontainer.py  value_container.py
ductape/conv/pointers/: __init__.py  struct_pointer.py  value_pointer.py  warning_null_pointer.py
ductape/emitters/: cpp_emitter.py  emitter_base.py  python_emitter.py  shared_lib_emitter.py
ductape/frontends/: c_header.py  frontend_base.py  json_schema.py  protobuf.py
runtime_reference/: adapter_base.h  version_info.h
scripts/: install-hooks.sh  pre-push.sh
tests/: test_config_validation.py  test_converter_generation.py  test_expression_eval.py  test_golden_files.py  test_limitations_fixes.py  test_parser.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_pointer_abstractions.py  test_preprocessor.py  test_semantic_conflicts.py  test_tokenizer.py
variants/reference_multi_format/schemas/: sensor_v1.proto  (+2 more)
variants/reference_project/: config.yaml
(+9 files in other folders)
